// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bataguridae-cytb 1`] = `
Array [
  "Batagur_trivittata__EU030216",
  "Batagur_kachuga__EU030215",
  "Orlitia_borneensis__AY434619",
  "Morenia_ocellata__AY434605",
  "Hardella_thurjii__AY434603",
  "Batagur_borneoensis__AY434601",
  "Batagur_affinis__AY434600",
  "Malayemys_subtrijuga__AY434591",
  "Pangshura_tecta__AY434583",
  "Ocadia_philippeni__AY434582",
  "Geoclemys_hamiltonii__AY434573",
  "Batagur_dhongoka__AY434569",
  "Malayemys_subtrijuga__KU848668",
  "Malayemys_macrocephala__KU848667",
  "Malayemys_subtrijuga__KU848666",
  "Malayemys_macrocephala__KU848665",
  "Malayemys_subtrijuga__KU848664",
  "Malayemys_subtrijuga__KU848663",
  "Malayemys_subtrijuga__KU848662",
  "Malayemys_subtrijuga__KU848661",
  "Malayemys_subtrijuga__KU848660",
  "Malayemys_subtrijuga__KU848659",
  "Malayemys_macrocephala__KU848658",
  "Malayemys_subtrijuga__KU848657",
  "Malayemys_khoratensis__KU848656",
  "Malayemys_macrocephala__KU848655",
  "Malayemys_macrocephala__KU848654",
  "Malayemys_macrocephala__KU848653",
  "Malayemys_khoratensis__KU848652",
  "Malayemys_khoratensis__KU848651",
  "Malayemys_khoratensis__KU848650",
  "Malayemys_macrocephala__KU848649",
  "Malayemys_macrocephala__KU848648",
  "Malayemys_macrocephala__KU848647",
  "Malayemys_macrocephala__KU848646",
  "Malayemys_macrocephala__KU848645",
  "Malayemys_khoratensis__KU848644",
  "Malayemys_subtrijuga__KU848643",
  "Malayemys_macrocephala__KU848642",
  "Malayemys_macrocephala__KU848641",
  "Malayemys_subtrijuga__KU848640",
  "Malayemys_macrocephala__KU848639",
  "Malayemys_macrocephala__KU848638",
  "Malayemys_macrocephala__KU848637",
  "Malayemys_macrocephala__KU848636",
  "Malayemys_khoratensis__KU848635",
  "Malayemys_subtrijuga__KU848634",
  "Malayemys_macrocephala__KU848633",
  "Malayemys_khoratensis__KU848632",
  "Malayemys_macrocephala__KU848631",
  "Malayemys_subtrijuga__KU848630",
  "Malayemys_subtrijuga__KU848629",
  "Malayemys_macrocephala__KU848628",
  "Malayemys_macrocephala__KU848627",
  "Malayemys_macrocephala__KU848626",
  "Malayemys_khoratensis__KU848625",
  "Malayemys_macrocephala__KU848624",
  "Malayemys_subtrijuga__KU848623",
  "Malayemys_macrocephala__KU848622",
  "Malayemys_macrocephala__KU848621",
  "Malayemys_khoratensis__KU848620",
  "Malayemys_macrocephala__KU848619",
  "Malayemys_macrocephala__KU848618",
  "Malayemys_macrocephala__KU848617",
  "Malayemys_subtrijuga__KU848616",
  "Malayemys_subtrijuga__KU848615",
  "Malayemys_khoratensis__KU848614",
  "Malayemys_macrocephala__KU848613",
  "Malayemys_macrocephala__KU848612",
  "Malayemys_khoratensis__KU848611",
  "Malayemys_macrocephala__KU848610",
  "Malayemys_subtrijuga__KU848609",
  "Malayemys_subtrijuga__KU848608",
  "Malayemys_subtrijuga__KU848607",
  "Malayemys_subtrijuga__KU848606",
  "Malayemys_macrocephala__KU848605",
  "Malayemys_macrocephala__KU848604",
  "Malayemys_macrocephala__KU848603",
  "Malayemys_khoratensis__KU848602",
  "Malayemys_macrocephala__KU848601",
  "Malayemys_subtrijuga__KU848600",
  "Malayemys_macrocephala__KU848599",
  "Malayemys_macrocephala__KU848598",
  "Malayemys_subtrijuga__KU848597",
  "Malayemys_subtrijuga__KU848596",
  "Malayemys_subtrijuga__KU848595",
  "Malayemys_macrocephala__KU848594",
  "Malayemys_khoratensis__KU848593",
  "Malayemys_macrocephala__KU848592",
  "Malayemys_macrocephala__KU848591",
  "Malayemys_macrocephala__KU848590",
  "Malayemys_macrocephala__KU848589",
  "Malayemys_macrocephala__KU848588",
  "Malayemys_khoratensis__KU848587",
  "Malayemys_macrocephala__KU848586",
  "Malayemys_macrocephala__KU848585",
  "Malayemys_macrocephala__KU848584",
  "Malayemys_subtrijuga__KU848583",
  "Malayemys_khoratensis__KU848582",
  "Malayemys_macrocephala__KU848581",
  "Malayemys_macrocephala__KU848580",
  "Malayemys_subtrijuga__JN860669",
  "Malayemys_subtrijuga__JN860668",
  "Morenia_ocellata__JN860667",
  "Geoclemys_hamiltonii__JN860644",
  "Morenia_petersi__JN202621",
  "Geoclemys_hamiltonii__JN232526",
  "Pangshura_tecta__JN232520",
  "Pangshura_sylhetensis__JN232519",
  "Batagur_trivittata__AM691758",
  "Batagur_affinis__AM691754",
  "Batagur_affinis__AM691753",
  "Batagur_affinis__AM691752",
  "Batagur_affinis__AM691751",
  "Batagur_affinis__AM691750",
  "Batagur_borneoensis__AM691757",
  "Batagur_borneoensis__AM691756",
  "Batagur_borneoensis__AM691755",
  "Geoclemys_hamiltonii__EF558365",
  "Batagur_kachuga__EF558362",
  "Batagur_affinis__FN313570",
  "Batagur_affinis__FN313569",
  "Batagur_affinis__FN313568",
  "Batagur_baska__FN313567",
  "Pangshura_sylhetensis__AM495298",
  "Pangshura_sylhetensis__AM495297",
  "Pangshura_sylhetensis__AM495296",
  "Pangshura_smithii__AM495294",
  "Batagur_kachuga__AM495287",
  "Batagur_kachuga__AM495286",
  "Batagur_kachuga__AM495285",
  "Batagur_kachuga__AM495284",
  "Batagur_dhongoka__AM495283",
  "Batagur_dhongoka__AM495282",
  "Batagur_dhongoka__AM495281",
  "Hardella_thurjii__AM495280",
  "Hardella_thurjii__AM495279",
  "Hardella_thurjii__AM495278",
  "Hardella_thurjii__AM495277",
  "Hardella_thurjii__AM495275",
  "Hardella_thurjii__AM495274",
  "Hardella_thurjii__AM495273",
  "Hardella_thurjii__AM495272",
  "Hardella_thurjii__AM495271",
  "Batagur_borneoensis__AM495270",
  "Batagur_baska__AM495269",
  "Batagur_baska__AM495268",
  "Batagur_baska__AM495267",
  "Pangshura_tecta__AM495307",
  "Pangshura_tecta__AM495306",
  "Pangshura_tecta__AM495305",
  "Pangshura_tecta__AM495304",
  "Pangshura_tecta__AM495303",
  "Pangshura_tecta__AM495302",
  "Pangshura_tecta__AM495301",
  "Pangshura_tentoria__AM495323",
  "Pangshura_sylhetensis__AM495300",
  "Pangshura_sylhetensis__AM495299",
  "Orlitia_borneensis__AJ564464",
  "Batagur_dhongoka__AJ564452",
  "Malayemys_subtrijuga__AJ519502",
]
`;

exports[`catdog 1`] = `
Array [
  "Canis_lupus__KU253532",
  "Canis_lupus__KU253531",
  "Felis_catus__KU253483",
  "Felis_catus__KU253482",
  "Felis_catus__KT626624",
  "Felis_catus__KT626623",
  "Canis_lupus__KC346426",
  "Canis_lupus__KC346425",
  "Canis_lupus__KC346424",
  "Canis_lupus__KC346423",
  "Canis_lupus__KC346422",
  "Canis_lupus__KC346421",
  "Canis_lupus__KC346420",
  "Canis_lupus__KC346419",
  "Felis_catus__AB194817",
  "Felis_catus__AB194816",
  "Felis_catus__AB194815",
  "Felis_catus__AB194814",
  "Felis_catus__AB194813",
  "Felis_catus__AB194812",
]
`;

exports[`coyote-test 1`] = `
Array [
  "Canis_latrans__EU400576",
  "Canis_latrans__EU400575",
  "Canis_latrans__EU400574",
  "Canis_latrans__EU400573",
  "Canis_latrans__EU400572",
  "Canis_latrans__EU400571",
  "Canis_latrans__EU400570",
  "Canis_latrans__EU400569",
  "Canis_latrans__EU400568",
  "Canis_latrans__EU400567",
  "Canis_latrans__EU400566",
  "Canis_latrans__EU400565",
  "Canis_latrans__EU400564",
  "Canis_latrans__EU400563",
  "Canis_latrans__EU400562",
  "Canis_latrans__EU400561",
  "Canis_latrans__EU400560",
  "Canis_latrans__EU400559",
  "Canis_latrans__EU400558",
  "Canis_latrans__EU400557",
  "Canis_latrans__EU400556",
  "Canis_latrans__EU400555",
  "Canis_latrans__EU400554",
  "Canis_latrans__EU400553",
  "Canis_latrans__EU400552",
  "Canis_latrans__EU400551",
  "Canis_latrans__EU400550",
  "Canis_latrans__EU400549",
  "Canis_latrans__EU400548",
  "Canis_latrans__EU400547",
  "Canis_latrans__EU400546",
  "Canis_latrans__EU400545",
  "Canis_latrans__EU400544",
  "Canis_lupus__AF115703",
  "Canis_lupus__AF115702",
  "Canis_lupus__AF115701",
  "Canis_lupus__AF115700",
  "Canis_lupus__AF115699",
  "Canis_lupus__AF115698",
  "Canis_lupus__AF115697",
  "Canis_lupus__AF115696",
  "Canis_lupus__AF115695",
  "Canis_lupus__AF115694",
  "Canis_lupus__AF115693",
  "Canis_lupus__AF115692",
  "Canis_lupus__AF115691",
  "Canis_lupus__AF115690",
  "Canis_lupus__AF115689",
  "Canis_lupus__AF115688",
  "Canis_lupus__AF115687",
]
`;

exports[`emydura 1`] = `
Array [
  "Emydura subglobosa__KC755190",
  "Emydura victoriae__KC755189",
  "Emydura victoriae__KC755188",
  "Emydura tanybaraga__KC755187",
  "Emydura tanybaraga__KC755186",
  "Emydura subglobosa__KC755185",
  "Emydura macquarii__KC755183",
]
`;

exports[`emydura-short 1`] = `
Array [
  "Emydura subglobosa__KC755190",
  "Emydura victoriae__KC755189",
  "Emydura victoriae__KC755188",
  "Emydura tanybaraga__KC755187",
  "Emydura tanybaraga__KC755186",
  "Emydura subglobosa__KC755185",
  "Emydura macquarii__KC755183",
]
`;

exports[`kino 1`] = `
Array [
  "Sternotherus carinatus__JN860673",
  "Kinosternon subrubrum__KF301391",
  "Kinosternon subrubrum__KF301390",
  "Kinosternon sonoriense__KF301389",
  "Kinosternon scorpioides__KF301387",
  "Kinosternon scorpioides__KF301386",
  "Kinosternon scorpioides__KF301385",
  "Kinosternon oaxacae__KF301384",
  "Kinosternon leucostomum__KF301383",
  "Kinosternon integrum__KF301382",
  "Kinosternon integrum__KF301381",
  "Kinosternon integrum__KF301380",
  "Kinosternon hirtipes__KF301379",
  "Kinosternon herrerai__KF301378",
  "Kinosternon herrerai__KF301377",
  "Kinosternon flavescens__KF301376",
  "Kinosternon durangoense__KF301375",
  "Kinosternon dunni__KF301374",
  "Kinosternon creaseri__KF301373",
  "Kinosternon chimalhuaca__KF301372",
  "Kinosternon baurii__KF301371",
  "Kinosternon arizonense__KF301370",
  "Kinosternon angustipons__KF301369",
  "Kinosternon alamosae__KF301368",
  "Kinosternon acutum__KF301367",
  "Kinosternon acutum__KF301366",
  "Sternotherus odoratus__KF301365",
  "Sternotherus minor__KF301364",
  "Sternotherus minor__KF301363",
  "Sternotherus depressus__KF301362",
  "Sternotherus carinatus__KF301361",
  "Staurotypus triporcatus__KF301360",
  "Staurotypus salvinii__KF301359",
  "Claudius angustatus__KF301358",
]
`;

exports[`lepomis 1`] = `
Array [
  "Lepomis_symmetricus__JF742837",
  "Lepomis_punctatus__JF742836",
  "Lepomis_miniatus__JF742835",
  "Lepomis_microlophus__JF742834",
  "Lepomis_megalotis__JF742833",
  "Lepomis_marginatus__JF742832",
  "Lepomis_humilis__JF742831",
  "Lepomis_gibbosus__JF742829",
  "Lepomis_cyanellus__JF742828",
  "Lepomis_auritus__JF742827",
  "Lepomis_symmetricus__AY828996",
  "Lepomis_symmetricus__AY828995",
  "Lepomis_punctatus__AY828994",
  "Lepomis_punctatus__AY828993",
  "Lepomis_punctatus__AY828992",
  "Lepomis_punctatus__AY828991",
  "Lepomis_miniatus__AY828990",
  "Lepomis_miniatus__AY828989",
  "Lepomis_miniatus__AY828988",
  "Lepomis_miniatus__AY828987",
  "Lepomis_miniatus__AY828986",
  "Lepomis_miniatus__AY828985",
  "Lepomis_miniatus__AY828984",
  "Lepomis_miniatus__AY828983",
  "Lepomis_microlophus__AY828982",
  "Lepomis_microlophus__AY828981",
  "Lepomis_microlophus__AY828980",
  "Lepomis_microlophus__AY828979",
  "Lepomis_microlophus__AY828978",
  "Lepomis_megalotis__AY828975",
  "Lepomis_megalotis__AY828974",
  "Lepomis_megalotis__AY828973",
  "Lepomis_marginatus__AY828972",
  "Lepomis_marginatus__AY828971",
  "Lepomis_marginatus__AY828970",
  "Lepomis_marginatus__AY828969",
  "Lepomis_macrochirus__AY828968",
  "Lepomis_macrochirus__AY828967",
  "Lepomis_macrochirus__AY828966",
  "Lepomis_humilis__AY828965",
  "Lepomis_humilis__AY828964",
  "Lepomis_cyanellus__AY828959",
  "Lepomis_cyanellus__AY828958",
  "Lepomis_auritus__AY828957",
  "Lepomis_auritus__AY828956",
  "Lepomis_auritus__AY828955",
  "Lepomis_auritus__AY828954",
  "Lepomis_auritus__AY828953",
  "Lepomis_auritus__AY828952",
  "Lepomis_auritus__AY828950",
  "Lepomis_humilis__AY374293",
  "Lepomis_miniatus__AY225668",
  "Lepomis_macrochirus__AY225667",
  "Lepomis_macrochirus__AY115976",
  "Lepomis_macrochirus__AY115975",
  "Lepomis_cyanellus__AY115974",
  "Lepomis_cyanellus__AY115973",
  "Lepomis_auritus__AY115970",
  "Lepomis_megalotis__KF571627",
  "Lepomis_megalotis__KF571626",
  "Lepomis_megalotis__KF571625",
  "Lepomis_megalotis__KF571624",
  "Lepomis_megalotis__KF571623",
  "Lepomis_megalotis__KF571622",
  "Lepomis_megalotis__KF571621",
  "Lepomis_megalotis__KF571620",
  "Lepomis_megalotis__KF571619",
  "Lepomis_megalotis__KF571618",
  "Lepomis_megalotis__KF571617",
  "Lepomis_megalotis__KF571616",
  "Lepomis_megalotis__KF571615",
  "Lepomis_megalotis__KF571614",
  "Lepomis_megalotis__KF571613",
  "Lepomis_megalotis__KF571612",
  "Lepomis_megalotis__KF571611",
  "Lepomis_megalotis__KF571610",
  "Lepomis_megalotis__KF571609",
  "Lepomis_megalotis__KF571608",
  "Lepomis_megalotis__KF571607",
  "Lepomis_megalotis__KF571606",
  "Lepomis_megalotis__KF571605",
  "Lepomis_megalotis__KF571604",
  "Lepomis_megalotis__KF571603",
  "Lepomis_megalotis__KF571602",
  "Lepomis_megalotis__KF571601",
  "Lepomis_megalotis__KF571600",
  "Lepomis_megalotis__KF571599",
  "Lepomis_megalotis__KF571598",
  "Lepomis_megalotis__KF571597",
  "Lepomis_megalotis__KF571596",
  "Lepomis_megalotis__KF571595",
  "Lepomis_megalotis__KF571594",
  "Lepomis_megalotis__KF571593",
  "Lepomis_megalotis__KF571592",
  "Lepomis_megalotis__KF571591",
  "Lepomis_megalotis__KF571590",
  "Lepomis_megalotis__KF571589",
  "Lepomis_megalotis__KF571588",
  "Lepomis_megalotis__KF571587",
  "Lepomis_megalotis__KF571586",
  "Lepomis_megalotis__KF571585",
  "Lepomis_megalotis__KF571584",
  "Lepomis_megalotis__KF571583",
  "Lepomis_megalotis__KF571582",
  "Lepomis_megalotis__KF571581",
  "Lepomis_megalotis__KF571580",
  "Lepomis_megalotis__KF571579",
  "Lepomis_megalotis__KF571578",
  "Lepomis_megalotis__KF571577",
  "Lepomis_megalotis__KF571576",
  "Lepomis_megalotis__KF571575",
  "Lepomis_megalotis__KF571574",
  "Lepomis_megalotis__KF571573",
  "Lepomis_megalotis__KF571572",
  "Lepomis_megalotis__KF571571",
  "Lepomis_megalotis__KF571570",
  "Lepomis_megalotis__KF571569",
  "Lepomis_megalotis__KF571568",
  "Lepomis_megalotis__KF571567",
  "Lepomis_megalotis__KF571566",
  "Lepomis_megalotis__KF571565",
  "Lepomis_megalotis__KF571564",
  "Lepomis_megalotis__KF571563",
  "Lepomis_megalotis__KF571562",
  "Lepomis_megalotis__KF571561",
  "Lepomis_megalotis__KF571560",
  "Lepomis_megalotis__KF571559",
  "Lepomis_megalotis__KF571558",
  "Lepomis_megalotis__KF571557",
  "Lepomis_megalotis__KF571556",
  "Lepomis_megalotis__KF571555",
  "Lepomis_megalotis__KF571554",
  "Lepomis_megalotis__KF571553",
  "Lepomis_megalotis__KF571552",
  "Lepomis_megalotis__KF571551",
]
`;

exports[`pelomedusidae-cytb 1`] = `
Array [
  "Pelusios_castanoides__HQ230307",
  "Pelusios_castanoides__HQ230306",
  "Pelusios_castanoides__HQ230302",
  "Pelusios_castanoides__HQ230301",
  "Pelusios_castanoides__HQ230300",
  "Pelusios_castanoides__HQ230298",
  "Pelusios_castanoides__HQ230297",
  "Pelusios_castanoides__HQ230296",
  "Pelusios_castanoides__HQ230295",
  "Pelusios_castanoides__HQ230294",
  "Pelusios_castanoides__HQ230293",
  "Pelusios_castanoides__HQ230292",
  "Pelusios_castanoides__HQ230291",
  "Pelusios_castanoides__HQ230290",
  "Pelusios_castanoides__HQ230289",
  "Pelusios_castanoides__HQ230288",
  "Pelusios_castanoides__HQ230287",
  "Pelusios_castanoides__HQ230286",
  "Pelusios_castanoides__HQ230285",
  "Pelusios_castanoides__HQ230284",
  "Pelusios_castanoides__HQ230283",
  "Pelusios_castanoides__HQ230281",
  "Pelusios_castanoides__HQ230280",
  "Pelusios_castanoides__HQ230279",
  "Pelusios_castanoides__HQ230278",
  "Pelusios_castanoides__HQ230277",
  "Pelusios_castanoides__HQ230276",
  "Pelusios_castanoides__HQ230275",
  "Pelusios_castanoides__HQ230274",
  "Pelusios_castanoides__HQ230273",
  "Pelusios_castanoides__HQ230272",
  "Pelusios_castanoides__HQ230271",
  "Pelusios_castanoides__HQ230270",
  "Pelusios_castanoides__HQ230269",
  "Pelusios_castanoides__HQ230268",
  "Pelusios_subniger__HQ230267",
  "Pelusios_subniger__HQ230266",
  "Pelusios_subniger__HQ230265",
  "Pelusios_subniger__HQ230264",
  "Pelusios_subniger__HQ230263",
  "Pelusios_subniger__HQ230262",
  "Pelusios_subniger__HQ230261",
  "Pelusios_subniger__HQ230260",
  "Pelusios_subniger__HQ230259",
  "Pelusios_subniger__HQ230258",
  "Pelusios_subniger__HQ230257",
  "Pelusios_subniger__HQ230256",
  "Pelusios_subniger__HQ230255",
  "Pelusios_subniger__HQ230254",
  "Pelusios_subniger__HQ230253",
  "Pelusios_subniger__HQ230251",
  "Pelusios_subniger__HQ230250",
  "Pelusios_subniger__HQ230249",
  "Pelusios_subniger__HQ230248",
  "Pelusios_subniger__HQ230247",
  "Pelusios_subniger__HQ230246",
  "Pelusios_subniger__HQ230245",
  "Pelusios_subniger__HQ230244",
  "Pelusios_subniger__HE980016",
  "Pelusios_subniger__HE980015",
  "Pelusios_subniger__HE980014",
  "Pelusios_subniger__HE980013",
  "Pelusios_subniger__HE980012",
  "Pelusios_subniger__HE980011",
  "Pelusios_subniger__HE980010",
  "Pelusios_subniger__HE980009",
  "Pelusios_subniger__HE980008",
  "Pelusios_subniger__HE980007",
  "Pelusios_subniger__HE980006",
  "Pelusios_subniger__HE980005",
  "Pelusios_subniger__HE980004",
  "Pelusios_subniger__HE980003",
  "Pelusios_subniger__HE980002",
  "Pelusios_subniger__HE980001",
  "Pelusios_subniger__HE980000",
  "Pelusios_subniger__HE979999",
  "Pelusios_subniger__HE979998",
  "Pelusios_subniger__HE979997",
  "Pelusios_subniger__HE979996",
  "Pelusios_subniger__HE979995",
  "Pelusios_subniger__HE979994",
  "Pelusios_subniger__HE979993",
  "Pelusios_subniger__HE979992",
  "Pelusios_subniger__HE979991",
  "Pelusios_subniger__HE979990",
  "Pelusios_subniger__HE979989",
  "Pelusios_subniger__HE979988",
  "Pelusios_castanoides__HE979987",
  "Pelusios_castanoides__HE979986",
  "Pelusios_castanoides__HE979985",
  "Pelusios_castanoides__HE979984",
  "Pelusios_castanoides__HE979983",
  "Pelusios_castanoides__HE979982",
  "Pelusios_castanoides__HE979981",
  "Pelusios_castanoides__HE979980",
  "Pelusios_castanoides__HE979979",
  "Pelusios_marani__JQ352045",
  "Pelusios_marani__JQ352044",
  "Pelusios_marani__JQ352043",
  "Pelusios_marani__JQ352042",
  "Pelusios_gabonensis__JQ352041",
  "Pelusios_gabonensis__JQ352040",
  "Pelusios_castanoides__JQ352039",
  "Pelusios_broadleyi__JQ352038",
  "Pelusios_broadleyi__JQ352037",
  "Pelusios_subniger__FR716939",
  "Pelusios_upembae__FR716944",
  "Pelusios_upembae__FR716943",
  "Pelusios_upembae__FR716942",
  "Pelusios_subniger__FR716941",
  "Pelusios_subniger__FR716940",
  "Pelusios_sinuatus__FR716938",
  "Pelusios_sinuatus__FR716937",
  "Pelusios_rhodesianus__FR716936",
  "Pelusios_rhodesianus__FR716935",
  "Pelusios_nanus__FR716929",
  "Pelusios_marani__FR716928",
  "Pelusios_gabonensis__FR716927",
  "Pelusios_cupulatta__FR716926",
  "Pelusios_cupulatta__FR716925",
  "Pelusios_cupulatta__FR716924",
  "Pelusios_cupulatta__FR716923",
  "Pelusios_chapini__FR716922",
  "Pelusios_castanoides__FR716921",
  "Pelusios_castanoides__FR716920",
  "Pelusios_castanoides__FR716919",
  "Pelusios_castanoides__FR716918",
  "Pelusios_castanoides__FR716917",
  "Pelusios_castanoides__FR716916",
  "Pelusios_castaneus__FR716915",
  "Pelusios_castaneus__FR716914",
  "Pelusios_castaneus__FR716913",
  "Pelusios_castaneus__FR716912",
  "Pelusios_castaneus__FR716905",
  "Pelusios_castaneus__FR716904",
  "Pelusios_carinatus__FR716903",
  "Pelusios_carinatus__FR716902",
  "Pelusios_carinatus__FR716901",
  "Pelusios_broadleyi__FR716900",
  "Pelusios_broadleyi__FR716899",
  "Pelusios_broadleyi__FR716898",
  "Pelusios_broadleyi__FR716897",
  "Pelusios_broadleyi__FR716896",
  "Pelusios_bechuanicus__FR716895",
  "Pelusios_bechuanicus__FR716894",
]
`;

exports[`plaamyd 1`] = `
Array [
  "Amyda ornata__LM537490",
  "Amyda ornata__LM537482",
  "Amyda ornata__LM537478",
  "Amyda ornata__LM537462",
  "Amyda cartilaginea__LM537466",
  "Palea steindachneri__AY259552",
  "Palea steindachneri__AY743417",
]
`;

exports[`pseudemyscytbplushnfal 1`] = `
Array [
  "Pseudemys_suwanniensis__FLMNH135541",
  "Pseudemys_suwanniensis__FLMNH11115",
  "Pseudemys_rubriventris__FLMNH150355",
  "Pseudemys_nelsoni__FLMNH52686",
  "Pseudemys_nelsoni__FLMNH143606",
  "Pseudemys_concinna__NA",
  "Pseudemys_concinna__NA2",
  "Pseudemys_floridana__LSUMZ83551",
  "Pseudemys_floridana__LSUMZ83549",
  "Pseudemys_floridana__HBS123560",
]
`;

exports[`smallerlepus 1`] = `
Array [
  "Lepus mandshuricus__HM233091",
  "Lepus mandshuricus__HM233090",
  "Lepus mandshuricus__HM233089",
  "Lepus mandshuricus__HM233088",
  "Lepus mandshuricus__HM233077",
  "Lepus mandshuricus__HM233014",
  "Lepus mandshuricus__HM233011",
  "Lepus mandshuricus__HM233010",
  "Lepus mandshuricus__HM232996",
  "Lepus mandshuricus__HM232995",
  "Lepus mandshuricus__HM232994",
  "Lepus mandshuricus__HM232993",
  "Lepus mandshuricus__HM232992",
  "Lepus mandshuricus__HM232991",
  "Lepus brachyurus__AB058616",
  "Lepus brachyurus__AB058615",
  "Lepus timidus__AB058607",
  "Lepus mandshuricus__DQ793161",
  "Lepus coreanus__AB687534",
  "Lepus coreanus__AB687533",
  "Lepus coreanus__AB687532",
  "Lepus coreanus__AB687531",
  "Lepus timidus__AB687530",
  "Lepus timidus__AB687529",
  "Lepus timidus__AB687528",
  "Lepus timidus__AB687527",
  "Lepus timidus__AB687526",
  "Lepus timidus__AB687525",
  "Lepus timidus__AB687524",
]
`;

exports[`trio171sequence 1`] = `
Array [
  "Pelodiscus_sinensis__AB904729",
  "Pelodiscus_sinensis__AB904728",
  "Pelodiscus_sinensis__AB904727",
  "Pelodiscus_sinensis__AB904726",
  "Pelodiscus_maackii__AB904725",
  "Pelodiscus_maackii__AB904724",
  "Pelodiscus_maackii__AB904723",
  "Pelodiscus_maackii__AB904722",
  "Pelodiscus_maackii__AB904721",
  "Pelodiscus_maackii__AB904720",
  "Amyda_ornata__LM537490",
  "Amyda_ornata__LM537482",
  "Amyda_ornata__LM537478",
  "Amyda_ornata__LM537462",
  "Amyda_cartilaginea__LM537466",
  "Pelodiscus_sinensis__FR851459",
  "Nilssonia_nigricans__HE801760",
  "Nilssonia_nigricans__HE801759",
  "Nilssonia_nigricans__HE801758",
  "Nilssonia_nigricans__HE801757",
  "Nilssonia_hurum__HE801756",
  "Nilssonia_hurum__HE801755",
  "Nilssonia_hurum__HE801754",
  "Nilssonia_hurum__HE801753",
  "Nilssonia_hurum__HE801752",
  "Nilssonia_gangetica__HE801751",
  "Nilssonia_gangetica__HE801750",
  "Nilssonia_gangetica__HE801749",
  "Nilssonia_gangetica__HE801748",
  "Nilssonia_gangetica__HE801747",
  "Nilssonia_gangetica__HE801746",
  "Nilssonia_gangetica__HE801745",
  "Nilssonia_gangetica__HE801744",
  "Nilssonia_gangetica__HE801743",
  "Nilssonia_gangetica__HE801742",
  "Nilssonia_formosa__HE801741",
  "Nilssonia_formosa__HE801740",
  "Pelochelys_cantorii__JN232533",
  "Lissemys_punctata__JN232531",
  "Chitra_indica__JN232529",
  "Nilssonia_hurum__JN232528",
  "Nilssonia_nigricans__JN232527",
  "Cycloderma_aubryi__FR850656",
  "Cycloderma_aubryi__FR850655",
  "Cyclanorbis_senegalensis__FR850654",
  "Lissemys_scutata__FR850653",
  "Lissemys_scutata__FR850652",
  "Lissemys_scutata__FR850651",
  "Lissemys_scutata__FR850650",
  "Lissemys_punctata__FR850649",
  "Lissemys_punctata__FR850648",
  "Lissemys_punctata__FR850647",
  "Lissemys_punctata__FR850646",
  "Lissemys_punctata__FR850645",
  "Lissemys_punctata__FR850644",
  "Lissemys_punctata__FR850643",
  "Lissemys_punctata__FR850642",
  "Lissemys_punctata__FR850641",
  "Lissemys_punctata__FR850640",
  "Lissemys_punctata__FR850639",
  "Lissemys_punctata__FR850638",
  "Lissemys_punctata__FR850637",
  "Lissemys_punctata__FR850636",
  "Lissemys_punctata__FR850635",
  "Lissemys_punctata__FR850634",
  "Lissemys_punctata__FR850633",
  "Lissemys_punctata__FR850632",
  "Lissemys_punctata__FR850631",
  "Lissemys_punctata__FR850630",
  "Lissemys_punctata__FR850629",
  "Lissemys_punctata__FR850628",
  "Lissemys_punctata__FR850627",
  "Lissemys_punctata__FR850626",
  "Lissemys_punctata__FR850625",
  "Lissemys_punctata__FR850624",
  "Lissemys_punctata__FR850623",
  "Lissemys_punctata__FR850622",
  "Lissemys_punctata__FR850621",
  "Lissemys_punctata__FR850620",
  "Lissemys_punctata__FR850619",
  "Lissemys_punctata__FR850618",
  "Lissemys_punctata__FR850617",
  "Lissemys_punctata__FR850616",
  "Lissemys_punctata__FR850615",
  "Lissemys_punctata__FR850614",
  "Lissemys_punctata__FR850613",
  "Lissemys_punctata__FR850612",
  "Lissemys_punctata__FR850611",
  "Lissemys_punctata__FR850610",
  "Lissemys_punctata__FR850609",
  "Lissemys_punctata__FR850608",
  "Lissemys_punctata__FR850607",
  "Pelodiscus_maackii__FM999011",
  "Cyclanorbis_elegans__AY259570",
  "Cyclanorbis_senegalensis__AY259569",
  "Lissemys_punctata__AY259568",
  "Lissemys_scutata__AY259567",
  "Cycloderma_aubryi__AY259566",
  "Cycloderma_frenatum__AY259565",
  "Trionyx_triunguis__AY259564",
  "Chitra_vandijki__AY259563",
  "Chitra_chitra__AY259562",
  "Chitra_indica__AY259561",
  "Pelochelys_cantorii__AY259560",
  "Pelochelys_bibroni__AY259559",
  "Apalone_spinifera__AY259558",
  "Apalone_spinifera__AY259557",
  "Apalone_mutica__AY259556",
  "Apalone_ferox__AY259555",
  "Rafetus_euphraticus__AY259554",
  "Pelodiscus_sinensis__AY259553",
  "Palea_steindachneri__AY259552",
  "Dogania_subplana__AY259551",
  "Nilssonia_gangetica__AY259549",
  "Nilssonia_hurum__AY259548",
  "Nilssonia_formosa__AY259547",
  "Palea_steindachneri__AY743417",
  "Pelodiscus_axenaria__AY583693",
  "Pelodiscus_sinensis__AY583692",
  "Nilssonia_gangetica__AM495217",
  "Nilssonia_gangetica__AM495216",
  "Nilssonia_gangetica__AM495215",
  "Nilssonia_nigricans__AM495236",
  "Nilssonia_nigricans__AM495235",
  "Nilssonia_nigricans__AM495234",
  "Nilssonia_nigricans__AM495233",
  "Nilssonia_nigricans__AM495232",
  "Nilssonia_nigricans__AM495231",
  "Nilssonia_nigricans__AM495230",
  "Nilssonia_nigricans__AM495229",
  "Nilssonia_nigricans__AM495228",
  "Nilssonia_nigricans__AM495227",
  "Nilssonia_leithii__AM495226",
  "Nilssonia_leithii__AM495225",
  "Nilssonia_hurum__AM495224",
  "Nilssonia_hurum__AM495223",
  "Nilssonia_hurum__AM495222",
  "Nilssonia_hurum__AM495221",
  "Nilssonia_hurum__AM495220",
  "Nilssonia_hurum__AM495219",
  "Nilssonia_hurum__AM495218",
  "Nilssonia_gangetica__AM495214",
  "Nilssonia_gangetica__AM495213",
  "Nilssonia_gangetica__AM495212",
  "Nilssonia_gangetica__AM495211",
  "Nilssonia_gangetica__AM495210",
  "Nilssonia_gangetica__AM495209",
  "Nilssonia_gangetica__AM495208",
]
`;

exports[`trionychcytb 1`] = `
Array [
  "Acomys_dimidiatus__Z96060",
  "Acomys_dimidiatus__Z96061",
  "Acomys_dimidiatus__Z96062",
  "Acomys_spinosissimus__Z96067",
  "Acomys_spinosissimus__Z96068",
  "Trionyx_triunguis__AY259564",
  "Amyda_ornata__LM537462",
  "Amyda_ornata__LM537478",
  "Amyda_ornata__LM537482",
  "Amyda_ornata__LM537490",
  "Balaenoptera_bonaerensis__X75581",
  "Apalone_spinifera__AY259558",
  "Amphistichus_argenteus__JN125234",
  "Amphistichus_argenteus__JN125235",
  "Amphistichus_argenteus__JN125236",
  "Pelochelys_bibroni__AY259559",
  "Amyda_cartilaginea__AY259550",
  "Amyda_cartilaginea__JN232534",
  "Amyda_cartilaginea__LM537465",
  "Amyda_cartilaginea__LM537466",
  "Amyda_cartilaginea__LM537467",
  "Amyda_cartilaginea__LM537476",
  "Amyda_cartilaginea__LM537480",
  "Amyda_cartilaginea__LM537481",
  "Amyda_cartilaginea__LM537483",
  "Amyda_cartilaginea__LM537484",
  "Amyda_cartilaginea__LM537485",
  "Amyda_cartilaginea__LM537491",
  "Amyda_cartilaginea__LM537492",
  "Amyda_cartilaginea__LM537493",
  "Amyda_cartilaginea__LM537494",
  "Balaena_mysticetus__X75588",
  "Lissemys_scutata__AY259567",
  "Lissemys_scutata__FR850650",
  "Lissemys_scutata__FR850651",
  "Lissemys_scutata__FR850652",
  "Lissemys_scutata__FR850653",
  "Amphistichus_koelzi__JN125237",
  "Amphistichus_koelzi__JN125238",
  "Amphistichus_koelzi__JN125239",
  "Pelochelys_cantorii__AY259560",
  "Pelochelys_cantorii__JN232533",
  "Capra_ibex__AJ010055",
  "Pelodiscus_sinensis__AY259553",
  "Pelodiscus_sinensis__AY583692",
  "Pelodiscus_sinensis__JN860674",
  "Pelodiscus_sinensis__FR851459",
  "Pelodiscus_sinensis__AB904726",
  "Pelodiscus_sinensis__AB904727",
  "Pelodiscus_sinensis__AB904728",
  "Pelodiscus_sinensis__AB904729",
  "Chioninia_delalandii__AJ305008",
  "Chioninia_delalandii__AJ305009",
  "Chioninia_delalandii__AJ305010",
  "Chioninia_delalandii__AJ305011",
  "Chioninia_delalandii__AJ305012",
  "Chioninia_delalandii__AJ305013",
  "Chioninia_delalandii__AJ305014",
  "Chioninia_delalandii__AJ305015",
  "Chioninia_delalandii__AJ305016",
  "Chioninia_delalandii__AJ305017",
  "Chioninia_delalandii__AJ305018",
  "Chitra_chitra__AY259562",
  "Chitra_indica__AY259561",
  "Chitra_indica__JN232529",
  "Chitra_vandijki__AY259563",
  "Paracentrotus_lividus__AH001273",
  "Cyclanorbis_elegans__AY259570",
  "Cyclanorbis_senegalensis__AY259569",
  "Cyclanorbis_senegalensis__FR850654",
  "Cycloderma_aubryi__AY259566",
  "Cycloderma_aubryi__FR850655",
  "Cycloderma_aubryi__FR850656",
  "Cycloderma_frenatum__AY259565",
  "Dogania_subplana__AY259551",
  "Acomys_cahirinus__Z96051",
  "Acomys_cahirinus__Z96052",
  "Acomys_cahirinus__Z96053",
  "Rafetus_euphraticus__AY259554",
  "Acomys_ignitus__Z96063",
  "Acomys_ignitus__Z96064",
  "Apalone_ferox__AY259555",
  "Acomys_russatus__Z96065",
  "Acomys_russatus__Z96066",
  "Eschrichtius_robustus__X75585",
  "Apalone_spinifera__AY259557",
  "Megaptera_novaeangliae__X75584",
  "Pelodiscus_axenaria__AY583693",
  "Lissemys_punctata__AY259568",
  "Mustela_nivalis__AM932882",
  "Mustela_nivalis__AM932883",
  "Mustela_nivalis__AM932884",
  "Mustela_nivalis__AM932885",
  "Lissemys_punctata__FR850607",
  "Lissemys_punctata__FR850608",
  "Lissemys_punctata__FR850609",
  "Lissemys_punctata__FR850610",
  "Lissemys_punctata__FR850611",
  "Lissemys_punctata__FR850612",
  "Lissemys_punctata__FR850613",
  "Lissemys_punctata__FR850615",
  "Lissemys_punctata__FR850616",
  "Lissemys_punctata__FR850617",
  "Lissemys_punctata__FR850618",
  "Lissemys_punctata__FR850619",
  "Lissemys_punctata__JN232531",
  "Lissemys_punctata__FR850614",
  "Lissemys_punctata__FR850620",
  "Lissemys_punctata__FR850621",
  "Lissemys_punctata__FR850622",
  "Lissemys_punctata__FR850623",
  "Lissemys_punctata__FR850624",
  "Lissemys_punctata__FR850625",
  "Lissemys_punctata__FR850626",
  "Lissemys_punctata__FR850627",
  "Lissemys_punctata__FR850628",
  "Lissemys_punctata__FR850629",
  "Lissemys_punctata__FR850630",
  "Lissemys_punctata__FR850631",
  "Lissemys_punctata__FR850632",
  "Lissemys_punctata__FR850633",
  "Lissemys_punctata__FR850634",
  "Lissemys_punctata__FR850635",
  "Lissemys_punctata__FR850636",
  "Lissemys_punctata__FR850637",
  "Lissemys_punctata__FR850638",
  "Lissemys_punctata__FR850639",
  "Lissemys_punctata__FR850640",
  "Lissemys_punctata__FR850641",
  "Lissemys_punctata__FR850642",
  "Lissemys_punctata__FR850643",
  "Lissemys_punctata__FR850644",
  "Lissemys_punctata__FR850645",
  "Lissemys_punctata__FR850646",
  "Lissemys_punctata__FR850647",
  "Lissemys_punctata__FR850648",
  "Lissemys_punctata__FR850649",
  "Balaenoptera_acutorostrata__X75753",
  "Nilssonia_formosa__AY259547",
  "Nilssonia_formosa__HE801740",
  "Nilssonia_formosa__HE801741",
  "Nilssonia_gangetica__AY259549",
  "Nilssonia_gangetica__AM495208",
  "Nilssonia_gangetica__AM495209",
  "Nilssonia_gangetica__AM495210",
  "Nilssonia_gangetica__AM495211",
  "Nilssonia_gangetica__AM495212",
  "Nilssonia_gangetica__AM495213",
  "Nilssonia_gangetica__AM495214",
  "Nilssonia_gangetica__AM495215",
  "Nilssonia_gangetica__AM495216",
  "Nilssonia_gangetica__AM495217",
  "Nilssonia_gangetica__HE801742",
  "Nilssonia_gangetica__HE801743",
  "Nilssonia_gangetica__HE801744",
  "Nilssonia_gangetica__HE801745",
  "Nilssonia_gangetica__HE801746",
  "Nilssonia_gangetica__HE801747",
  "Nilssonia_gangetica__HE801748",
  "Nilssonia_gangetica__HE801749",
  "Nilssonia_gangetica__HE801750",
  "Nilssonia_gangetica__HE801751",
  "Nilssonia_hurum__AY259548",
  "Nilssonia_hurum__AM495218",
  "Nilssonia_hurum__AM495219",
  "Nilssonia_hurum__AM495220",
  "Nilssonia_hurum__AM495221",
  "Nilssonia_hurum__AM495222",
  "Nilssonia_hurum__AM495223",
  "Nilssonia_hurum__AM495224",
  "Nilssonia_hurum__JN232528",
  "Nilssonia_hurum__HE801752",
  "Nilssonia_hurum__HE801753",
  "Nilssonia_hurum__HE801754",
  "Nilssonia_hurum__HE801755",
  "Nilssonia_hurum__HE801756",
  "Nilssonia_leithii__AM495225",
  "Nilssonia_leithii__AM495226",
  "Nilssonia_nigricans__AM495227",
  "Nilssonia_nigricans__AM495228",
  "Nilssonia_nigricans__AM495229",
  "Nilssonia_nigricans__AM495230",
  "Nilssonia_nigricans__AM495231",
  "Nilssonia_nigricans__AM495232",
  "Nilssonia_nigricans__AM495233",
  "Nilssonia_nigricans__AM495234",
  "Nilssonia_nigricans__AM495235",
  "Nilssonia_nigricans__AM495236",
  "Nilssonia_nigricans__AM495237",
  "Nilssonia_nigricans__JN232527",
  "Nilssonia_nigricans__HE801757",
  "Nilssonia_nigricans__HE801758",
  "Nilssonia_nigricans__HE801759",
  "Nilssonia_nigricans__HE801760",
  "Eubalaena_glacialis__X75587",
  "Capra_nubiana__AJ009879",
  "Pelodiscus_maackii__FM999011",
  "Pelodiscus_maackii__AB904720",
  "Pelodiscus_maackii__AB904721",
  "Pelodiscus_maackii__AB904722",
  "Pelodiscus_maackii__AB904723",
  "Pelodiscus_maackii__AB904724",
  "Pelodiscus_maackii__AB904725",
  "Pongo_pygmaeus__X97717",
  "Balaenoptera_edeni__X75583",
  "Caperea_marginata__X75586",
  "Pnoepyga_pusilla__JX518496",
  "Amphistichus_rhodoterus__JN125240",
  "Amphistichus_rhodoterus__JN125241",
  "Amphistichus_rhodoterus__JN125242",
  "Macaca_mulatta__AF378365",
  "Corvus_frugilegus__Y16885",
  "Balaenoptera_borealis__X75582",
  "Hyperprosopon_ellipticum__JN125246",
  "Apalone_mutica__AY259556",
  "Anser_caerulescens__X77190",
  "Mus_minutoides__FN985221",
  "Mus_minutoides__FN985222",
  "Mus_minutoides__FN985223",
  "Mus_minutoides__FN985224",
  "Capra_pyrenaica__AJ010047",
  "Capra_pyrenaica__AJ010048",
  "Capra_pyrenaica__AJ010049",
  "Capra_pyrenaica__AJ010050",
  "Capra_pyrenaica__AJ010051",
  "Capra_pyrenaica__AJ010052",
  "Capra_pyrenaica__AJ010053",
  "Capra_pyrenaica__AJ010054",
  "Capra_pyrenaica__AJ010056",
  "Physeter_catodon__X75589",
  "Hyperprosopon_anale__JN125243",
  "Hyperprosopon_anale__JN125244",
  "Hyperprosopon_anale__JN125245",
  "Mus_musculoides__Z96069",
  "Hyperprosopon_argenteum__JN125250",
  "Palea_steindachneri__AY259552",
  "Palea_steindachneri__AY743417",
]
`;

exports[`vulpes 1`] = `
Array [
  "Vulpes_cana__KU378587",
  "Vulpes_cana__KU378586",
  "Vulpes_cana__KU378585",
  "Vulpes_cana__KU378584",
  "Vulpes_cana__KU378583",
  "Vulpes_cana__KU378582",
  "Vulpes_cana__KU378581",
  "Vulpes_vulpes__KU378580",
  "Vulpes_vulpes__KU378579",
  "Vulpes_vulpes__KU378578",
  "Vulpes_vulpes__KU378577",
  "Vulpes_vulpes__KU378576",
  "Vulpes_vulpes__KU378575",
  "Vulpes_vulpes__KU378574",
  "Vulpes_vulpes__KU378573",
  "Vulpes_vulpes__KU378572",
  "Vulpes_vulpes__KU378571",
  "Vulpes_vulpes__KU378570",
  "Vulpes_vulpes__KU378569",
  "Vulpes_vulpes__KU378568",
  "Vulpes_vulpes__KU378567",
  "Vulpes_vulpes__KU378566",
  "Vulpes_vulpes__KU378565",
  "Vulpes_vulpes__KU378564",
  "Vulpes_vulpes__KU378563",
  "Vulpes_vulpes__KU378562",
  "Vulpes_vulpes__KU378561",
  "Vulpes_vulpes__KU378560",
  "Vulpes_vulpes__KU378559",
  "Vulpes_vulpes__KU378557",
  "Vulpes_vulpes__KU378556",
  "Vulpes_vulpes__KU378555",
  "Vulpes_vulpes__KU378552",
  "Vulpes_vulpes__KU378549",
  "Vulpes_vulpes__KU378548",
  "Vulpes_vulpes__KU378547",
  "Vulpes_vulpes__KU378546",
  "Vulpes_vulpes__KU378545",
  "Vulpes_vulpes__KU378542",
  "Vulpes_vulpes__KU378541",
  "Vulpes_vulpes__KU378540",
  "Vulpes_vulpes__KU378539",
  "Vulpes_vulpes__KU378538",
  "Vulpes_vulpes__KU378537",
  "Vulpes_vulpes__KU378536",
  "Vulpes_vulpes__KU378535",
  "Vulpes_vulpes__KU378533",
  "Vulpes_vulpes__KU378532",
  "Vulpes_vulpes__KU378530",
  "Vulpes_vulpes__KU378529",
  "Vulpes_vulpes__KU378528",
  "Vulpes_vulpes__KU378527",
  "Vulpes_vulpes__KU378526",
  "Vulpes_vulpes__KU378525",
  "Vulpes_vulpes__KU378524",
  "Vulpes_vulpes__KU378523",
  "Vulpes_vulpes__KU378522",
  "Vulpes_vulpes__KU378521",
  "Vulpes_vulpes__KU378520",
  "Vulpes_vulpes__KU378518",
  "Vulpes_vulpes__KU378517",
  "Vulpes_vulpes__KU378516",
  "Vulpes_vulpes__KU378515",
  "Vulpes_vulpes__KU378514",
  "Vulpes_vulpes__KU378513",
  "Vulpes_vulpes__KU378512",
  "Vulpes_vulpes__KU378511",
  "Vulpes_vulpes__KU378510",
  "Vulpes_vulpes__KU378509",
  "Vulpes_vulpes__KU378508",
  "Vulpes_vulpes__KU378507",
  "Vulpes_vulpes__KU378506",
  "Vulpes_vulpes__KU378505",
  "Vulpes_vulpes__KU378504",
  "Vulpes_vulpes__KU378503",
  "Vulpes_vulpes__KU378502",
  "Vulpes_vulpes__KU378501",
  "Vulpes_vulpes__KU378500",
  "Vulpes_vulpes__KU378498",
  "Vulpes_vulpes__KU378497",
  "Vulpes_vulpes__KU378495",
  "Vulpes_vulpes__KU378494",
  "Vulpes_vulpes__KU378491",
  "Vulpes_corsac__KU378490",
  "Vulpes_corsac__KU378489",
  "Vulpes_corsac__KU378488",
  "Vulpes_corsac__KU378487",
  "Vulpes_rueppellii__KU378373",
  "Vulpes_rueppellii__KU378372",
  "Vulpes_rueppellii__KU378371",
  "Vulpes_rueppellii__KU378370",
  "Vulpes_rueppellii__KU378369",
  "Vulpes_rueppellii__KU378368",
  "Vulpes_vulpes__EF689062",
  "Vulpes_vulpes__EF689061",
  "Vulpes_vulpes__EF689060",
  "Vulpes_vulpes__EF689059",
  "Vulpes_vulpes__EF689058",
  "Vulpes_vulpes__AY928669",
  "Vulpes_vulpes__DQ498127",
  "Vulpes_vulpes__DQ498126",
  "Vulpes_vulpes__DQ498125",
  "Vulpes_vulpes__DQ498124",
  "Vulpes_lagopus__LT560065",
  "Vulpes_lagopus__LT560053",
  "Vulpes_lagopus__LT560041",
  "Vulpes_lagopus__LT560029",
  "Vulpes_lagopus__LT560017",
  "Vulpes_lagopus__LT560005",
  "Vulpes_lagopus__LT559993",
  "Vulpes_lagopus__LT559981",
  "Vulpes_lagopus__LT559969",
  "Vulpes_lagopus__LT559957",
  "Vulpes_lagopus__LT559945",
  "Vulpes_lagopus__LT559933",
  "Vulpes_lagopus__LT559921",
  "Vulpes_lagopus__LT559909",
  "Vulpes_lagopus__LT559897",
  "Vulpes_lagopus__LT559885",
  "Vulpes_lagopus__LT559873",
  "Vulpes_lagopus__LT559861",
  "Vulpes_lagopus__LT559849",
  "Vulpes_lagopus__LT559837",
  "Vulpes_lagopus__LT559825",
  "Vulpes_lagopus__LT559813",
  "Vulpes_lagopus__LT559801",
  "Vulpes_lagopus__LT559789",
  "Vulpes_lagopus__LT559777",
  "Vulpes_lagopus__LT559765",
  "Vulpes_lagopus__LT559753",
  "Vulpes_lagopus__LT559741",
  "Vulpes_lagopus__LT559729",
  "Vulpes_lagopus__LT559717",
  "Vulpes_lagopus__LT559705",
  "Vulpes_lagopus__LT559693",
  "Vulpes_lagopus__LT559681",
  "Vulpes_lagopus__LT559669",
  "Vulpes_lagopus__LT559657",
  "Vulpes_lagopus__LT559645",
  "Vulpes_lagopus__LT559633",
  "Vulpes_lagopus__LT559621",
  "Vulpes_lagopus__LT559609",
  "Vulpes_lagopus__LT559597",
  "Vulpes_lagopus__LT559585",
  "Vulpes_lagopus__LT559573",
  "Vulpes_lagopus__LT559561",
  "Vulpes_lagopus__LT559549",
  "Vulpes_lagopus__LT559537",
  "Vulpes_lagopus__LT559525",
  "Vulpes_lagopus__LT559513",
  "Vulpes_lagopus__LT559501",
  "Vulpes_lagopus__LT559489",
  "Vulpes_macrotis__AH005827",
  "Vulpes_vulpes__KM657043",
  "Vulpes_vulpes__KM657042",
  "Vulpes_vulpes__KM657041",
  "Vulpes_vulpes__KM657040",
  "Vulpes_vulpes__KM657039",
  "Vulpes_vulpes__KM657038",
  "Vulpes_vulpes__JQ003578",
  "Vulpes_vulpes__JQ003577",
  "Vulpes_vulpes__JN652618",
  "Vulpes_vulpes__JN652617",
  "Vulpes_vulpes__JN652616",
  "Vulpes_vulpes__JN652615",
  "Vulpes_vulpes__JN652614",
  "Vulpes_vulpes__JN652613",
  "Vulpes_vulpes__JN652612",
  "Vulpes_vulpes__JN652611",
  "Vulpes_vulpes__JN652610",
  "Vulpes_vulpes__JN652609",
  "Vulpes_vulpes__JN652608",
  "Vulpes_vulpes__JN652607",
  "Vulpes_vulpes__JN652606",
  "Vulpes_vulpes__JN652605",
  "Vulpes_vulpes__JN652604",
  "Vulpes_vulpes__JN652603",
  "Vulpes_vulpes__JX013648",
  "Vulpes_vulpes__JX013647",
  "Vulpes_vulpes__JX013646",
  "Vulpes_macrotis__JF489127",
]
`;
